fixed z-index on control buttons, recompiled with cleaver v0.6.1

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@
   left: 0; right: 0;
 }
 
+.controls {
+  z-index: 1;
+}
+
 @media (max-width: 480px) {
   .help {
     display: none;
